v2.5/security/compliance-reports-cis.md
---
title: CIS benchmark compliance reports for Kubernetes
redirect_from: latest/security/compliance-reports-cis
---

### Big picture

Use {{ site.prodname }} CIS benchmark compliance reports to assess compliance for all assets in a Kubernetes cluster.

### Value

Being able to assess your Kubernetes clusters against CIS benchmarks is a standard requirement for your organization’s security and compliance posture. 

{{ site.prodname }} CIS benchmark compliance reports provide this view into your Kubernetes clusters. Plus, the reports strengthen your threat detection capability, providing a more comprehensive view than looking only at network data.

### Features

This how-to guide uses the following {{ site.prodname }} features:

- Predefined CIS benchmark compliance reports that are installed with {{ site.prodname }}
- A **GlobalReport** resource to schedule reports and set thresholds
- The {{ site.prodname }}  compliance dashboard to view and export reports from Elasticsearch.

### Concepts

#### Kubernetes CIS benchmarks 

As part of {{ site.prodname }} installation, each node runs a pod named compliance-benchmarker that executes Kubernetes CIS benchmarks every hour (default). We recommend that you review the CIS benchmark best practices for securing cluster component configurations here: [CIS benchmarks downloads](https://learn.cisecurity.org/benchmarks).

#### Configure Global Report 

The {{ site.prodname }} **global report** is the resource for configuring CIS benchmark reports including scheduling, filtering, setting thresholds, and exporting reports in .csv format.

**Note**: Global reports are configured as YAML manifests and applied using kubectl.

### Before you begin...

Ensure that the compliance-benchmarker is running, and that the cis-benchmark report type is installed:
```
kubectl get -ncalico-monitoring daemonset compliance-benchmarker
kubectl get -ncalico-monitoring globalreporttype cis-benchmark
```

### How To

- [Configure and schedule CIS benchmark reports](#configure-and-schedule-cis-benchmark-reports)
- [View report generation status](#view-report-generation-status)
- [Address the CIS benchmark results](#address-the-cis-benchmark-results)
- [Manually run reports](#manually-run-reports)

#### Configure and schedule CIS benchmark reports

In the following example, we use a **GlobalReport** with CIS benchmark fields to schedule and filter results. The report is scheduled to run at midnight of the next day (in UTC), and the benchmark items 1.1.4 and 1.2.5 will be omitted from the results.

| **Fields**           | **Description** |
| -------------------- | --------------- |
| schedule             | The start and end time of the report using [crontab format](https://en.wikipedia.org/wiki/Cron). To allow for archiving, reports are generated approximately 30 minutes after the end time. A single report is limited to a maximum of two per hour. |
| highThreshold        | **Optional**. Integer percentage value that determines the lower limit of passing tests to consider a node as healthy. Default: 100 |
| medThreshold         | **Optional**. Integer percentage value that determines the lower limit of passing tests to consider a node as unhealthy. Default: 50 |
| includeUnscoredTests | **Optional**. Boolean value that when false, applies a filter to exclude tests that are marked as “Unscored” by the CIS benchmark standard. If true, the tests will be included in the report. Default: true |
| numFailedTests       | **Optional**. Integer value that sets the number of tests to display in the Top-failed Tests section of the CIS benchmark report. Default: 5 |
| resultsFilter        | **Optional**. Specifies an include or exclude filter to apply on the test results that will appear on the report. |

```
apiVersion: projectcalico.org/v3
kind: GlobalReport
metadata:
  name: daily-cis-results
  labels:
    deployment: production
spec:
  reportType: cis-benchmark
  schedule: 0 * * * *
  cis:
    highThreshold: 100
    medThreshold: 50
    includeUnscoredTests: true
    numFailedTests: 5
    resultsFilters:
    - benchmarkSelection: { kubernetesVersion: "1.13" }
      exclude: ["1.1.4", "1.2.5"]
```

#### View report generation status

To view the status of a report, you must use the `kubectl` command. For example:

```bash
kubectl get globalreports.projectcalico.org daily-cis-results -o yaml
```

In a report, the job status types are:

- **lastScheduledReportJob**:
  The most recently scheduled job for generating the report. Because reports are scheduled in order, the “end time” of
  this report will be the “start time” of the next scheduled report.
- **activeReportJobs**:
  Default = allows up to 5 concurrent report generation jobs.
- **lastFailedReportJobs**:
  Default = keeps the 3 most recent failed jobs and deletes older ones. A single report generation job will be retried
  up to 6 times (by default) before it is marked as failed.
- **lastSuccessfulReportJobs**:
  Default = keeps the 2 most recent successful jobs and deletes older ones.

##### Change the default report generation time

By default, reports are generated 30 minutes after the end of the report, to ensure all of the audit data is archived.
(However, this gap does not affect the data collected “start/end time” for a report.)

You can adjust the time for audit data for cases like initial report testing, to demo a report, or when manually
creating a report that is not counted in global report status.

To change the delay, go to the installation manifest, and uncomment and set the environment variable
`TIGERA_COMPLIANCE_JOB_START_DELAY`. Specify value as a [Duration string][parse-duration].

#### Address the CIS benchmark results

We recommend the following approach to CIS benchmark reports results: 
1. Download the Kubernetes CIS benchmarks and export your full CIS benchmark results in .csv format.
1. In the compliance dashboard, review the “Top-Failed Tests” section to identify which tests are the most problematic.
1. Cross reference the top-failed tests to identify which nodes are failing that test.
1. Look up those tests in the [Kubernetes benchmark document](https://downloads.cisecurity.org/#/) and follow the remediation steps to resolve the failure.
1. Discuss with your infrastructure and security team if this remediation is viable within your organization. 
  1. If so, update your nodes with the fix and ensure that the test passes on the next generation of the report.
  1. If the fix is not viable but is an acceptable risk to take within the organization, configure the report specification to exclude that test index so that it no longer shown in the report.
  1. If the fix is not viable and not an acceptable risk to take on, keep the failing test within the report so that your team is reminded to address the issue as soon as possible.

#### Manually run reports

You can manually run reports at any time. For example, run a manual report:

- To specify a different start/end time
- If a scheduled report fails

{{ site.prodname }} GlobalReport schedules Kubernetes Jobs which create a single-run pod to generate a report and store it
in Elasticsearch. Because you need to run manual reports as a pod, you need higher permissions: allow `create` access
access for pods in namespace `calico-monitoring` using the `tigera-compliance-reporter` service account.

To manually run a report:

1. Download the pod template.

   ```bash
   curl -O {{site.url}}/{{page.version}}/manifests/compliance-reporter-pod.yaml
   ```

1. Edit the template as follows:
   - Edit the pod name if required.
   - If you are using your own docker repository, update the container image name with your repo and image tag.
   - Set the following environments according to the instructions in the downloaded manifest:
     - `TIGERA_COMPLIANCE_REPORT_NAME`
     - `TIGERA_COMPLIANCE_REPORT_START_TIME`
     - `TIGERA_COMPLIANCE_REPORT_END_TIME`
1. Apply the updated manifest, and query the status of the pod to ensure it completes.
   Upon completion, the report is available in {{ site.prodname }} Manager.

   ```bash
   # Apply the compliance report pod
   kubectl apply -f compliance-reporter-pod.yaml
   # Query the status of the pod
   kubectl get pod <podname> -n=calico-monitoring
   ```

>**Note**: Manually-generated reports do not appear in GlobalReport status.
{: .alert .alert-info}


#### Troubleshooting

Any issues found with this report type would likely be due to a failure in the `compliance-benchmarker` component which
executes the CIS benchmark tests. A common cause of failure is that it is unable to locate either the kubelet
or the kubectl binaries necessary to determine the version of Kubernetes running on the cluster. If a node is not running kubelet
as a binary, i.e. is running within a hyperkube container, then the kubectl binary will have to be available in the `/usr/bin`
directory in order to execute the benchmark tests.

### Above and beyond

- For details on configuring and scheduling reports, see [Global Reports](/{{page.version}}/reference/resources/globalreport).
- For other predefined compliance reports, see [Compliance Reports](/{{page.version}}/reference/compliance-reports/).

[parse-duration]: https://golang.org/pkg/time/#ParseDuration
